--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -7,7 +7,8 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data source=skinet.db"
+    "Default": "Data source=skinet.db",
+    "Redis": "localhost"
   },
   "ApiUrl": "https://localhost:5001/"
 }
