--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -15,5 +15,8 @@
     "Key": "super secret key",
     "Issuer": "https://localhost:5001"
   },
-  "ApiUrl": "https://localhost:5001/Content/"
+  "ApiUrl": "https://localhost:5001/Content/",
+  "StripeSettings":{
+    "WhSecret": "whsec_EK5W64dOp4G1ulAM6wq3WLGzLi9rGdSU"
+  }
 }
